# thermal-watchdog

./: .gitignore  BUILD.bazel  MODULE.bazel  go.mod
proto/: BUILD.bazel  telemetery.proto
server/: BUILD.bazel  main.go  state.go
