load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "telemetry_proto",
    srcs = ["telemetery.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "telemetry_go_proto",
    importpath = "github.com/naufilf/thermal-watchdog/proto/telemetry",
    proto = ":telemetry_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "telemetry",
    embed = [":telemetry_go_proto"],
    importpath = "github.com/naufilf/thermal-watchdog/proto/telemetry",
    visibility = ["//visibility:public"],
)
